Prevent double borders on Gameboard grids

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -14,11 +14,15 @@
 }
 
 .gameboard {
-    margin: 10px;
-    display: grid;
-    grid-template-columns: repeat(10, 35px);
+    margin: 30px;
+    display: inline-grid;
+    grid-template-columns: repeat(10, 30px);
+    border: 1px solid black;
 }
 
 .gameboard-cell {
-    border: 1px solid black;
+    padding: 0;
+    width: 30px;
+    height: 30px;
+    outline: 0.5px solid black; 
 }
